# gf-rs

./: Cargo.toml  README.md
examples/: test_nalgebra.rs  test_shamir.rs
src/: gen_table.rs  impls.rs  lib.rs  simd.rs
