[package]
name = "gf"
version = "0.6.0"
edition = "2021"
authors = ["Liam Perlaki <lperlaki@icloud.com>"]
repository = "https://github.com/lperlaki/gf-rs"
description = "Galois Field"
license = "MIT"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2", default-features = false, optional = true }


[dev-dependencies]
rand = "0.8"
nalgebra = "0.31.0"


[features]
unstable_simd = []
